--- a/Loan Calculator/Base.lproj/Main.storyboard
+++ b/Loan Calculator/Base.lproj/Main.storyboard
@@ -55,11 +55,14 @@
                                                             <action selector="firstButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ELG-kS-H1I"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pgp-es-Am7">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pgp-es-Am7">
                                                         <rect key="frame" x="0.0" y="45" width="44" height="31"/>
                                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="arrowtriangle.right.circle.fill" catalog="system" title=""/>
+                                                        <connections>
+                                                            <action selector="secondButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tSp-9c-vHm"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3p-od-BKq">
                                                         <rect key="frame" x="0.0" y="90" width="44" height="31"/>
